<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.matechco.omnisales.LoginActivity">

    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@integer/customImeActionId"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView android:text="@string/registering_message" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/informationTextView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:selectAllOnFocus="true"
                android:textIsSelectable="true"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:enabled="true"
                android:editable="true" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registrationProgressBar"
                android:layout_gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/login_form" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:fitsSystemWindows="true">-->

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingTop="56dp"-->
        <!--android:paddingLeft="24dp"-->
        <!--android:paddingRight="24dp">-->

        <!--<ImageView android:src="@drawable/logo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="72dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <!--&lt;!&ndash;  Email Label &ndash;&gt;-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <!--<EditText android:id="@+id/input_email"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textEmailAddress"-->
                <!--android:hint="Email" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--&lt;!&ndash;  Password Label &ndash;&gt;-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <!--<EditText android:id="@+id/input_password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textPassword"-->
                <!--android:hint="Password"/>-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/btn_login"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:padding="12dp"-->
            <!--android:text="Login"/>-->

        <!--<TextView android:id="@+id/link_signup"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:text="No account yet? Create one"-->
            <!--android:gravity="center"-->
            <!--android:textSize="16dip"/>-->

    <!--</LinearLayout>-->
<!--</ScrollView>-->